Lesson-11-INGRESS Controllers/ingress-hosts1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts1
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: www.jtr-it.link
    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 80

  - host: web1.jtr-it.link
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 80

  - host: web2.jtr-it.link
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 80

  - host: cat.jtr-it.link
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
